// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-professions-libérales > CIPAV ACRE 1`] = `
"dirigeant . indépendant . cotisations et contributions: 1221
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
entreprise . chiffre d'affaires: 6221
impôt . montant: 0
protection sociale . retraite . base: 36
protection sociale . retraite . complémentaire: 24
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 2`] = `
"dirigeant . indépendant . cotisations et contributions: 4544
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19253
entreprise . chiffre d'affaires: 24544
impôt . montant: 747
protection sociale . retraite . base: 144
protection sociale . retraite . complémentaire: 95
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 3`] = `
"dirigeant . indépendant . cotisations et contributions: 21074
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40828
entreprise . chiffre d'affaires: 71074
impôt . montant: 9172
protection sociale . retraite . base: 308
protection sociale . retraite . complémentaire: 291
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 1`] = `
"dirigeant . indépendant . cotisations et contributions: 19846
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40510
entreprise . chiffre d'affaires: 69846
impôt . montant: 9490
protection sociale . retraite . base: 308
protection sociale . retraite . complémentaire: 222
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 2`] = `
"dirigeant . indépendant . cotisations et contributions: 14807
dirigeant . rémunération . net: 40000
dirigeant . rémunération . net . après impôt: 33549
entreprise . chiffre d'affaires: 54807
impôt . montant: 6451
protection sociale . retraite . base: 1714
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 1`] = `
"dirigeant . indépendant . cotisations et contributions: 32188
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47657
entreprise . chiffre d'affaires: 92188
impôt . montant: 12343
protection sociale . retraite . base: 308
protection sociale . retraite . complémentaire: 409
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 2`] = `
"dirigeant . indépendant . cotisations et contributions: 31471
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47662
entreprise . chiffre d'affaires: 91471
impôt . montant: 12338
protection sociale . retraite . base: 308
protection sociale . retraite . complémentaire: 409
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 3`] = `
"dirigeant . indépendant . cotisations et contributions: 31147
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47665
entreprise . chiffre d'affaires: 91147
impôt . montant: 12335
protection sociale . retraite . base: 410
protection sociale . retraite . complémentaire: 409
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 4`] = `
"dirigeant . indépendant . cotisations et contributions: 35562
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47629
entreprise . chiffre d'affaires: 95562
impôt . montant: 12371
protection sociale . retraite . base: 308
protection sociale . retraite . complémentaire: 410
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 5`] = `
"dirigeant . indépendant . cotisations et contributions: 33743
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47644
entreprise . chiffre d'affaires: 93743
impôt . montant: 12356
protection sociale . retraite . base: 437
protection sociale . retraite . complémentaire: 410
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 6`] = `
"dirigeant . indépendant . cotisations et contributions: 1783
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
entreprise . chiffre d'affaires: 2783
impôt . montant: 0
protection sociale . retraite . base: 71
protection sociale . retraite . complémentaire: 5
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 7`] = `
"dirigeant . indépendant . cotisations et contributions: 32188
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47657
entreprise . chiffre d'affaires: 92188
impôt . montant: 12343
protection sociale . retraite . base: 308
protection sociale . retraite . complémentaire: 409
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV exonération incapacité 1`] = `
"dirigeant . indépendant . cotisations et contributions: 7053
dirigeant . rémunération . net: 40000
dirigeant . rémunération . net . après impôt: 34024
entreprise . chiffre d'affaires: 47053
impôt . montant: 5976
protection sociale . retraite . base: 520
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 0"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 1`] = `
"dirigeant . indépendant . cotisations et contributions: 3434
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
entreprise . chiffre d'affaires: 13434
impôt . montant: 0
protection sociale . retraite . base: 72
protection sociale . retraite . complémentaire: 48
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 2`] = `
"dirigeant . indépendant . cotisations et contributions: 21074
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40828
entreprise . chiffre d'affaires: 71074
impôt . montant: 9172
protection sociale . retraite . base: 308
protection sociale . retraite . complémentaire: 291
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 3`] = `
"dirigeant . indépendant . cotisations et contributions: 46865
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 72415
entreprise . chiffre d'affaires: 146865
impôt . montant: 27585
protection sociale . retraite . base: 311
protection sociale . retraite . complémentaire: 874
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 1`] = `
"dirigeant . indépendant . cotisations et contributions: 923
dirigeant . rémunération . net: 500
dirigeant . rémunération . net . après impôt: 500
entreprise . chiffre d'affaires: 1423
impôt . montant: 0
protection sociale . retraite . base: 35
protection sociale . retraite . complémentaire: 2
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 2`] = `
"dirigeant . indépendant . cotisations et contributions: 1024
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
entreprise . chiffre d'affaires: 2024
impôt . montant: 0
protection sociale . retraite . base: 35
protection sociale . retraite . complémentaire: 5
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 3`] = `
"dirigeant . indépendant . cotisations et contributions: 1124
dirigeant . rémunération . net: 1500
dirigeant . rémunération . net . après impôt: 1500
entreprise . chiffre d'affaires: 2624
impôt . montant: 0
protection sociale . retraite . base: 35
protection sociale . retraite . complémentaire: 7
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 4`] = `
"dirigeant . indépendant . cotisations et contributions: 1226
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
entreprise . chiffre d'affaires: 3226
impôt . montant: 0
protection sociale . retraite . base: 35
protection sociale . retraite . complémentaire: 10
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 5`] = `
"dirigeant . indépendant . cotisations et contributions: 1846
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
entreprise . chiffre d'affaires: 6846
impôt . montant: 0
protection sociale . retraite . base: 36
protection sociale . retraite . complémentaire: 24
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 6`] = `
"dirigeant . indépendant . cotisations et contributions: 3434
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
entreprise . chiffre d'affaires: 13434
impôt . montant: 0
protection sociale . retraite . base: 72
protection sociale . retraite . complémentaire: 48
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 7`] = `
"dirigeant . indépendant . cotisations et contributions: 46865
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 72415
entreprise . chiffre d'affaires: 146865
impôt . montant: 27585
protection sociale . retraite . base: 311
protection sociale . retraite . complémentaire: 874
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 8`] = `
"dirigeant . indépendant . cotisations et contributions: 244199
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 527756
entreprise . chiffre d'affaires: 1244199
impôt . montant: 472244
protection sociale . retraite . base: 319
protection sociale . retraite . complémentaire: 1188
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 1`] = `
"dirigeant . indépendant . cotisations et contributions: 8267
dirigeant . rémunération . net: 21733
dirigeant . rémunération . net . après impôt: 20686
entreprise . chiffre d'affaires: 30000
impôt . montant: 1047
protection sociale . retraite . base: 157
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 2`] = `
"dirigeant . indépendant . cotisations et contributions: 8439
dirigeant . rémunération . net: 21561
dirigeant . rémunération . net . après impôt: 20541
entreprise . chiffre d'affaires: 30000
impôt . montant: 1020
protection sociale . retraite . base: 156
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 3`] = `
"dirigeant . indépendant . cotisations et contributions: 63839
dirigeant . rémunération . net: 236161
dirigeant . rémunération . net . après impôt: 148036
entreprise . chiffre d'affaires: 300000
impôt . montant: 88125
protection sociale . retraite . base: 319
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > avocat 1`] = `
"dirigeant . indépendant . cotisations et contributions: 11455
dirigeant . rémunération . net: 38545
dirigeant . rémunération . net . après impôt: 32981
entreprise . chiffre d'affaires: 50000
impôt . montant: 5564
protection sociale . retraite . base: 279
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > avocat 2`] = `
"dirigeant . indépendant . cotisations et contributions: 11857
dirigeant . rémunération . net: 38143
dirigeant . rémunération . net . après impôt: 32700
entreprise . chiffre d'affaires: 50000
impôt . montant: 5443
protection sociale . retraite . base: 276
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 1`] = `
"dirigeant . indépendant . cotisations et contributions: 4580
dirigeant . rémunération . net: 15420
dirigeant . rémunération . net . après impôt: 15420
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 111
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 2`] = `
"dirigeant . indépendant . cotisations et contributions: 14908
dirigeant . rémunération . net: 35092
dirigeant . rémunération . net . après impôt: 30565
entreprise . chiffre d'affaires: 50000
impôt . montant: 4527
protection sociale . retraite . base: 254
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 1`] = `
"dirigeant . indépendant . cotisations et contributions: 14534
dirigeant . rémunération . net: 35466
dirigeant . rémunération . net . après impôt: 30828
entreprise . chiffre d'affaires: 50000
impôt . montant: 4638
protection sociale . retraite . base: 257
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 2`] = `
"dirigeant . indépendant . cotisations et contributions: 20168
dirigeant . rémunération . net: 29832
dirigeant . rémunération . net . après impôt: 26884
entreprise . chiffre d'affaires: 50000
impôt . montant: 2948
protection sociale . retraite . base: 218
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 3`] = `
"dirigeant . indépendant . cotisations et contributions: 89213
dirigeant . rémunération . net: 210787
dirigeant . rémunération . net . après impôt: 134080
entreprise . chiffre d'affaires: 300000
impôt . montant: 76707
protection sociale . retraite . base: 319
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 4`] = `
"dirigeant . indépendant . cotisations et contributions: 108430
dirigeant . rémunération . net: 291570
dirigeant . rémunération . net . après impôt: 175716
entreprise . chiffre d'affaires: 400000
impôt . montant: 115854
protection sociale . retraite . base: 319
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 5`] = `
"dirigeant . indépendant . cotisations et contributions: 34626
dirigeant . rémunération . net: 85374
dirigeant . rémunération . net . après impôt: 64085
entreprise . chiffre d'affaires: 120000
impôt . montant: 21289
protection sociale . retraite . base: 310
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 6`] = `
"dirigeant . indépendant . cotisations et contributions: 14534
dirigeant . rémunération . net: 35466
dirigeant . rémunération . net . après impôt: 30828
entreprise . chiffre d'affaires: 50000
impôt . montant: 4638
protection sociale . retraite . base: 257
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > sage-femme 1`] = `
"dirigeant . indépendant . cotisations et contributions: 12430
dirigeant . rémunération . net: 37570
dirigeant . rémunération . net . après impôt: 32299
entreprise . chiffre d'affaires: 50000
impôt . montant: 5271
protection sociale . retraite . base: 272
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > sage-femme 2`] = `
"dirigeant . indépendant . cotisations et contributions: 5286
dirigeant . rémunération . net: 14714
dirigeant . rémunération . net . après impôt: 14714
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 106
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 3`] = `
"dirigeant . indépendant . cotisations et contributions: 1519
dirigeant . rémunération . net: 2481
dirigeant . rémunération . net . après impôt: 2481
entreprise . chiffre d'affaires: 4000
impôt . montant: 0
protection sociale . retraite . base: 35
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 3

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable, dirigeant . indépendant . PL . CARCDSF . sage-femme . exonération PCV"
`;

exports[`calculate simulations-professions-libérales > sage-femme 4`] = `
"dirigeant . indépendant . cotisations et contributions: 5286
dirigeant . rémunération . net: 14714
dirigeant . rémunération . net . après impôt: 14714
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 106
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 5`] = `
"dirigeant . indépendant . cotisations et contributions: 5286
dirigeant . rémunération . net: 14714
dirigeant . rémunération . net . après impôt: 14714
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 106
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 6`] = `
"dirigeant . indépendant . cotisations et contributions: 5286
dirigeant . rémunération . net: 14714
dirigeant . rémunération . net . après impôt: 14714
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 106
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;
